<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/bottom_center_button"
        android:layout_width="115dp"
        android:layout_height="115dp"
        android:text="@string/BottomCenterButton"
        android:textSize="48sp"
        app:layout_constraintEnd_toStartOf="@+id/bottom_right_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bottom_left_button"
        app:layout_constraintTop_toTopOf="@+id/bottom_left_button"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/top_left_button"
        android:layout_width="115dp"
        android:layout_height="115dp"
        android:layout_marginTop="48dp"
        android:text="@string/TopLeftButton"
        android:textSize="48sp"
        app:layout_constraintEnd_toStartOf="@+id/top_center_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/top_center_button"
        android:layout_width="115dp"
        android:layout_height="115dp"
        android:text="@string/TopCenterButton"
        android:textSize="48sp"
        app:layout_constraintEnd_toStartOf="@+id/top_right_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/top_left_button"
        app:layout_constraintTop_toTopOf="@+id/top_left_button" />

    <Button
        android:id="@+id/top_right_button"
        android:layout_width="115dp"
        android:layout_height="115dp"
        android:text="@string/TopRightButton"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/top_center_button"
        app:layout_constraintTop_toTopOf="@+id/top_center_button" />

    <Button
        android:id="@+id/middle_left_button"
        android:layout_width="115dp"
        android:layout_height="115dp"
        android:layout_marginTop="24dp"
        android:text="@string/MiddleLeftButton"
        android:textSize="48sp"
        app:layout_constraintEnd_toStartOf="@+id/middle_center_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_left_button" />

    <Button
        android:id="@+id/middle_center_button"
        android:layout_width="115dp"
        android:layout_height="115dp"
        android:text="@string/MiddleCenterButton"
        android:textSize="48sp"
        app:layout_constraintEnd_toStartOf="@+id/middle_right_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/middle_left_button"
        app:layout_constraintTop_toTopOf="@+id/middle_left_button" />

    <Button
        android:id="@+id/middle_right_button"
        android:layout_width="115dp"
        android:layout_height="115dp"
        android:text="@string/MiddleRightButton"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/middle_center_button"
        app:layout_constraintTop_toTopOf="@+id/middle_center_button" />

    <Button
        android:id="@+id/bottom_left_button"
        android:layout_width="115dp"
        android:layout_height="115dp"
        android:layout_marginTop="24dp"
        android:text="@string/BottomLeftButton"
        android:textSize="48sp"
        app:layout_constraintEnd_toStartOf="@+id/bottom_center_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/middle_left_button" />

    <Button
        android:id="@+id/bottom_right_button"
        android:layout_width="115dp"
        android:layout_height="115dp"
        android:text="@string/BottomRightButton"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bottom_center_button"
        app:layout_constraintTop_toTopOf="@+id/bottom_center_button" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="351dp"
        android:layout_height="33dp"
        android:layout_marginTop="28dp"
        android:text="@string/TextView"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bottom_center_button" />

    <Button
        android:id="@+id/new_game"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:text="@string/NewGame"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.166" />
</androidx.constraintlayout.widget.ConstraintLayout>